--- a/resources/css/custom-style.css
+++ b/resources/css/custom-style.css
@@ -6,6 +6,10 @@ html {
     -webkit-text-size-adjust: 100%
 }
 
+.bg-white {
+    background: white !important;
+}
+
 article,
 aside,
 details,
@@ -10057,7 +10061,7 @@ html {
 }
 
 .main-content {
-    background: #f8f2f9;
+    background: white;
     padding: 20px 0
 }
 
