--- a/resources/css/custom-style.css
+++ b/resources/css/custom-style.css
@@ -5936,7 +5936,7 @@ button.list-group-item-danger.active:hover {
 }
 
 .panel-primary>.panel-footer+.panel-collapse>.panel-body {
-    border-bottom-color: #337ab7
+    border-bottom-color:#1373c2
 }
 
 .panel-success {
@@ -9654,7 +9654,7 @@ img.full-width {
 }
 
 header {
-    background: #2095f2;
+    background: #1373c2;
     color: #fff;
     padding: 15px 0
 }
@@ -9938,7 +9938,7 @@ header {
 }
 
 footer {
-    background: #2095f2;
+    background: #1373c2;
     color: #fff;
     padding: 15px 0 0;
     margin-bottom: 0
